# repolite

./: .buildinfo  .gitchangelog.rc  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.rst  MANIFEST.in  README.html  README.rst  REUSE.toml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  repolite-sdist-sbom.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  toxfile.py
.github/: dependabot.yml  fix_pkg_name.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autobot.yml  autopersonal.yml  bandit.yml  ci.yml  coverage.yml  pylint.yml  release.yml  sphinx.yml  wheels.yml
_modules/: index.html
_modules/repolite/: repolite.html
_sources/: CHANGELOG.rst.txt  README.rst.txt  index.rst.txt
_sources/api/: modules.rst.txt  repolite.repolite.rst.txt  repolite.rst.txt
_static/: documentation_options.js
api/: modules.html  repolite.html  repolite.repolite.html
docs/source/: conf.py
src/repolite/: __init__.py  repolite.py
src/repolite/data/: example.yml
tests/: conftest.py  test_misc.py  test_repolite.py
