[metadata]
name = repolite
version = attr: repolite.__version__
description = attr: repolite.__description__
url = https://github.com/sarnold/repolite
author = Stephen Arnold
author_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license_expression = LGPL-2.1-or-later
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.6
install_requires =
    munch
    PyYAML
    ruamel.yaml

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
repolite.data =
    *.yaml

[options.entry_points]
console_scripts =
    repolite = repolite.repolite:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
cov =
    pytest-cov
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
